public class Owner {
    private String name;

    public Owner(String n){
      this.name=n;
    }
    public String toString(){
        return "";
    }
}
